# xer-reader

./: .gitignore  CHANGELOG.md  MSJC-STEM-230501.xlsx  README.md  pyproject.toml  scripts.py
src/: reader.py
tests/: config_template.py  test_reader.py
xer_reader/: __init__.py
xer_reader/src/: reader.py  table.py  table_data.py  table_info.py
